[pom] Add exports for jdk 16+